--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.port": 5501,
-    "livePreview.defaultPreviewPath": "/Aula_19_Transform/src/index.html"
+    "livePreview.defaultPreviewPath": "/Aula_19_Transform/src/index.html",
+    "css.validate": false
 }
